--- a/app/src/main/res/layout/activity_form_home.xml
+++ b/app/src/main/res/layout/activity_form_home.xml
@@ -62,6 +62,7 @@
                 android:layout_height="130dp"
                 android:layout_marginEnd="6dp"
                 android:layout_weight="1"
+                android:foreground="?selectableItemBackground"
                 app:cardBackgroundColor="@color/card1"
 
                 app:cardCornerRadius="6dp"
@@ -105,6 +106,7 @@
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/card2"
                 app:cardCornerRadius="6dp"
+                android:foreground="?selectableItemBackground"
                 app:cardMaxElevation="6dp">
 
 
@@ -154,6 +156,7 @@
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorAccent"
                 app:cardCornerRadius="6dp"
+                android:foreground="?selectableItemBackground"
                 app:cardMaxElevation="6dp">
 
                 <RelativeLayout
@@ -192,6 +195,7 @@
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/card4"
                 app:cardCornerRadius="6dp"
+                android:foreground="?selectableItemBackground"
                 app:cardMaxElevation="6dp">
 
 
