--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="lightgray">#e0e0e0</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorPrimary1">#0099ff</color>
     <color name="colorPrimaryDark1">#0099ff</color>
